data/all_generated_tests/raw_wast_tests/br_table_EdgeCaseFailuresinbr_table_2477.wast
;; 7. **Test Description:**    Utilize a br_table with a single label and explicitly place the operand within an embedded loop to ensure backward branching works correctly.    - **Specific Constraint:** Ensures the correct operand passing for backward branches in loop contexts.    - **Edge Case Relation:** Incorrect loop handling would malform control flow.

(assert_invalid
  (module
    (func (param i32) (result i32)
      (block
        (loop (result i32)
          (br_table 0 (local.get 0) (i32.const 0))
        )
      )
    )
  )
  "type mismatch"
)